Set the max-width of main left bar to 380px to prevent it from becoming too wide on certain sized screens.

--- a/src/style.css
+++ b/src/style.css
@@ -114,6 +114,7 @@ body {
     bottom: 0;
     height: 100%;
     width: 25%;
+    max-width: 380px;
     background: rgb(255, 255, 255);
     display: flex;
     align-items: center;
